# mock-ai-chat

./: .dockerignore  .env  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  docs.txt
backend/: backend.dockerfile
backend/app/: pyproject.toml  setup.cfg
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2d4a65ba387d_update_msg_table.py  4a1ca369783c_update_schema.py  54dca5c1014c_update.py  5b823f89e100_add_column_msg_and_interactions.py  5f8c77d027d7_add_column_last_name_to_user_model.py  993db43f318f_update_model_name_to_agent.py  d4867f3a4c0a_first_revision.py  f266445d8223_update_schema.py
backend/app/app/: backend_pre_start.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: interactions.py  login.py  users.py  utils.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_interaction.py  crud_msg.py  crud_user.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  interaction.py  msg.py  user.py
backend/app/app/schemas/: __init__.py  interaction.py  msg.py  token.py  user.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_login.py  test_users.py
backend/app/app/tests/crud/: test_user.py
backend/app/app/tests/utils/: interaction.py  user.py  utils.py
