[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SMBH <admin@mac.smb-h.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
requests = "^2.31.0"
celery = "^5.3.4 "
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.3"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
raven = "^6.10.0"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
sqlalchemy = "^2.0.22"
pytest = "^7.4.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpcore = "^1.0.0"
g4f = "^0.1.7.9 "

[tool.poetry.dev-dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
known_first_party = [
    "test",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]
# src_paths = ["test"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["test/**", "tests/**"]
omit = ["*/migrations/*", "*/tests/*"]


# ==== black ====
[tool.black]
line-length = 79
target-version = ['py311']
exclude = "versions/"


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_drf_plugin.main",
]


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_celery",
]

[tool.pylint.FORMAT]
max-line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
